<resources>
    <string name="app_name">ShoeStore</string>
    <string name="welcome_to_shoestore">Welcome to ShoeStore</string>
    <string name="login">Login</string>
    <string name="input_ur_login">input your login</string>
    <string name="password">Password</string>
    <string name="input_ur_password">input your password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_shoestore_best_shop_in_universe">Welcome to ShoeStore — best shop in universe!</string>
    <string name="welcome_fragment_string">We are really appreciate your choice for use out app! Enjoy!</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_shoelist">See ShoeList</string>
    <string name="instructions_for_shoestore">Instructions for ShoeStore</string>
    <string name="shoe_list">Shoe List:</string>
    <string name="add_shoe">Add shoe</string>
    <string name="company">Company:</string>
    <string name="size">Shoe size:</string>
    <string name="description">Description:</string>
    <string name="edit">Edit</string>
    <string name="shoe_name">Shoe name: </string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="in_shoestore_you_can">In shoestore you can get shoe list and add shoe</string>
</resources>
